enables web ui to re-issue enrollment token for existing tenant, brings AAD in sync between admin-api and api, treats SSRF projections as warnings
